--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,11 @@ dev_dependencies:
   # rules and activating additional ones.
   dio: ^4.0.0
   dio_http_cache: ^0.3.0
+  intl: ^0.17.0
   flutter_lints: ^1.0.0
   provider: ^5.0.0
   shimmer: ^2.0.0
+  sqflite: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
