--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  connectivity_plus: 2.2.0
   dio: ^4.0.0
   dio_http_cache: ^0.3.0
   intl: ^0.17.0
